[gd_scene load_steps=2 format=3 uid="uid://cuek6m7uaf3pg"]

[ext_resource type="Script" uid="uid://wpjylm00limy" path="res://authentication.gd" id="1_g6fiq"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6fiq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -168.0
offset_right = 188.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not logged in"
horizontal_alignment = 1

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="SignUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
